--- a/JigsawSudokuGameGUI.cabal
+++ b/JigsawSudokuGameGUI.cabal
@@ -36,6 +36,7 @@ library
       base >=4.7 && <5
     , gloss == 1.13.*
     , containers
+    , array
   default-language: Haskell2010
 
 executable JigsawSudokuGameGUI-exe
@@ -50,6 +51,7 @@ executable JigsawSudokuGameGUI-exe
     , base >=4.7 && <5
     , gloss == 1.13.*
     , containers
+    , array
   default-language: Haskell2010
 
 test-suite JigsawSudokuGameGUI-test
@@ -65,4 +67,5 @@ test-suite JigsawSudokuGameGUI-test
     , base >=4.7 && <5
     , gloss == 1.13.*
     , containers
+    , array
   default-language: Haskell2010
