--- a/JigsawSudokuGameGUI.cabal
+++ b/JigsawSudokuGameGUI.cabal
@@ -35,9 +35,8 @@ library
   build-depends:
       base >=4.7 && <5
     , gloss == 1.13.*
-    , containers
     , array
-    , random
+    , random-shuffle
   default-language: Haskell2010
 
 executable JigsawSudokuGameGUI-exe
@@ -51,9 +50,8 @@ executable JigsawSudokuGameGUI-exe
       JigsawSudokuGameGUI
     , base >=4.7 && <5
     , gloss == 1.13.*
-    , containers
     , array
-    , random
+    , random-shuffle
   default-language: Haskell2010
 
 test-suite JigsawSudokuGameGUI-test
@@ -68,7 +66,6 @@ test-suite JigsawSudokuGameGUI-test
       JigsawSudokuGameGUI
     , base >=4.7 && <5
     , gloss == 1.13.*
-    , containers
     , array
-    , random
+    , random-shuffle
   default-language: Haskell2010
