--- a/JigsawSudokuGameGUI.cabal
+++ b/JigsawSudokuGameGUI.cabal
@@ -30,6 +30,7 @@ library
       JigsawSudokuConstant
       JigsawSudokuControl
       JigsawSudokuType
+      JigsawSudokuGenerator
   other-modules:
       Paths_JigsawSudokuGameGUI
   hs-source-dirs:
@@ -42,6 +43,7 @@ library
     , set-cover ==0.0.9
     , containers
     , directory == 1.3.3.*
+    , random
   default-language: Haskell2010
 
 executable JigsawSudokuGameGUI-exe
@@ -60,6 +62,7 @@ executable JigsawSudokuGameGUI-exe
     , set-cover ==0.0.9
     , containers
     , directory == 1.3.3.*
+    , random
   default-language: Haskell2010
 
 test-suite JigsawSudokuGameGUI-test
@@ -79,4 +82,5 @@ test-suite JigsawSudokuGameGUI-test
     , set-cover ==0.0.9
     , containers
     , directory == 1.3.3.*
+    , random
   default-language: Haskell2010
